[package]
name = "codex-byte"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
blake3 = "1"
hex = "0.4"
http = "1"
chrono = { version = "0.4", features = ["clock"] }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
